# ttf-indicator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
lib/: frcm-0.1.0-py3-none-any.whl
src/ttf_indicator/: __init__.py  collector.py  indicator.py  sensor.py  service.py  test_collector.py  test_indicator.py  test_service.py
